# Kolokviums

./: .gitignore  README.md
kol1/: CMakeLists.txt  Theory questions.docx
kol1/Dependencies/include/utils/: funcs.h  single_linked_list.h
kol1/Dependencies/src/: funcs.cpp  single_linked_list.cpp
kol1/Main/: main.cpp
kol1/Tests/: Tests.cpp
